Closed Bug 176177 Opened 23 years ago Closed 21 years ago

History, Bookmarks and Highlight buttons don't have a pressed state in WinXP Luna

Categories

(Core Graveyard :: GFX: Win32, defect, P3)

x86
Windows XP

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: rack1, Assigned: son.le0)

References

Details

(Keywords: fixed-aviary1.0)

Attachments

(3 files, 2 obsolete files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021022 Phoenix/0.3 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021022 Phoenix/0.3 I customized my toolbar to include the download button, but I noticed that when I click it to bring up that sidebar, the button has a while background instead of the expected gray (or transparent perhaps) Reproducible: Always Steps to Reproduce: 1. Customize toolbar to include the download button 2. click button Actual Results: white background on button Expected Results: gray / default background on button
Summary: Download button is in correct colour when clicked → Download button is incorrect colour when clicked
Confirming on Mozilla/5.0 (Windows NT 5.0; rv:1.2b) Gecko/20021022 Phoenix/0.3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Confirmed on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021023 Phoenix/0.3. Similar problem can been seen on the buttons for displaying the bookmarks and history sidebars as well.
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021022 Phoenix/0.3 I confirm history and bookmarks as well. I never thought to check.
Summary: Download button is incorrect colour when clicked → Download, history and bookmarks buttons have white background colour when clicked
I've created a patch for this problem. This is my first patch, so please bear with me if anything is not correct.
OS: Linux → All
NB this is for Phoenix Classic pseudo patching as userChrome.css entries : doesn't work as in patch #history-button { background-color: transparent !important; } with #history-button[checked="true"]{ background-color: transparent !important; } white background not gone either patching global/toolbarbuttons.css would probably be more promising when phoenix cvs rebuilt I'll use mozengineer/DOM Inspector to investigate further
: [ ; pseudo patched userChrome[-example].css; of course intention was to save as userChrome.css patch should work fine sorry for bugspam
Comment on attachment 104643 [details] [diff] [review] Patch for white background on history, download and bookmark buttons blake, can you review this patch? it's basically putting a background-color: transparent !important on the sidebar toggle buttons. I seem to remember that this was proposed but not used because of native theme issues.
Attachment #104643 - Flags: review?(blaker)
I'm definiteley not very much into UI design and programming, but how can a "background-color: transparent" affect native theme colors? In my limited understanding a transparent background-color would always honor the native theme color for toolbars, windows etc.
I am not sure if this is the same bug or a related one, but in Windows XP (Luna interface), these three buttons don't have a depressed state at all. There is absolutely no visual clue as to whether or not the button is depressed. In IE6, if you click on Favorites for example, that button gets a white background.
Marking as WFM, since this was a Px Classic issue, and Qute is now the default theme.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → WORKSFORME
What are you talking about, Sébastien? Try it! :)
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Qute buttons for download/history/bookmarks don't have a white background when clicked, at least on w2k. See http://images.delahaye.net/buttons.png You can compare to http://seb.delahaye.net/phoenix/images/phoenix-history.png where the problem appears (I don't think it was a problem, though). That's what this bug is about.
You're right. Changing summary. Compare with IE to see how it should look like.
Summary: Download, history and bookmarks buttons have white background colour when clicked → Download, history and bookmarks buttons have dark-gray background colour when clicked
I don't see this bug here with all the latest nightlies (I tried the nightlies 21/2, 23/2, 25/2 and 27/2). Can anybody confirm this and mark this as WFM.
I'm morphing this bug into a Windows XP-specific bug instead. When using the Luna interface in Windows XP, you don't see if the buttons are pressed or not, as I previously mentioned in comment 9. Attaching screenshots.
Severity: trivial → minor
OS: All → Windows XP
Summary: Download, history and bookmarks buttons have dark-gray background colour when clicked → Download, History and Bookmarks buttons doesn't have a pressed state in WinXP Luna
In Windows Classic, all is fine.
Attachment #104643 - Attachment is obsolete: true
Attached image Windows Luna screenshot
When using the Luna theme in Windows XP, you don't see that the Downloads button is pressed.
Correcting typo in bug description.
Summary: Download, History and Bookmarks buttons doesn't have a pressed state in WinXP Luna → Download, History and Bookmarks buttons don't have a pressed state in WinXP Luna
David, how about this? Have the new icons from Arvid changed anything here?
Still the same as shown in the screenshots.
patches anyone?
Assignee: hyatt → kerz
Status: REOPENED → NEW
Target Milestone: --- → Firebird0.8
Taking QA Contact
QA Contact: asa → bugzilla
Attachment #104643 - Flags: review?(blake)
-> 0.9
Target Milestone: Firebird0.8 → Firebird0.9
I think this might be because the buttons have "-moz-appearance: toolbutton" set. As I understand it, on XP Luna (and maybe MacOS X?) this causes the border and background properties to be ignored and uses native rendering instead (see http://www.w3.org/TR/css3-ui/#appearance). Unfortunately this means that most of the properties in the toolbarbutton[checked="true"] rule are going to have no effect on the button's appearance. The ideal solution to this would be to have something like a "-moz-appearance: toolbarbutton-selected" property that could draw a native version of the button but in the selected state. Failing that, adding "-moz-appearance: none" to the toolbarbutton[checked="true"] rule also fixes this (though you lose the pretty rounded button look when selected). Of course I could be totally off the mark here... p.s. This bug also affects the buttons in the JS console (I can't be the only one who's accidentally set the filter to "Messages" and then spent 15 minutes wondering why my buggy JS isn't generating any error messages :-)
This occurs for all buttons that are of type="checkbox". Asking for 1.0 blocking.
Shouldn't there be some logic to look for a checked state in the function GetThemePartAndState in nsNativeThemeWin.cpp for case of NS_THEME_BUTTON and NS_THEME_TOOLBAR_BUTTON.
This is more visible now because of the Highlight button in the Find toolbar, which you can see with default settings. Nominating for blocking1.0.
Flags: blocking-aviary1.0?
Flags: blocking-aviary1.0RC1+
Flags: blocking-aviary1.0?
Flags: blocking-aviary1.0+
Priority: -- → P3
-> me
Assignee: kerz → firefox
We should remove "Download" from the summary, since it's not a toggle button anymore.
Removing Downloads, adding Hightlight button to summary.
Summary: Download, History and Bookmarks buttons don't have a pressed state in WinXP Luna → History, Bookmarks and Highlight buttons don't have a pressed state in WinXP Luna
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago22 years ago
Resolution: --- → FIXED
(In reply to comment #30) > Removing Downloads, adding Hightlight button to summary. Why? Why wasn't Downloads fixed? Sure, it's not a sidebar anymore, but it should have a pressed state when visible anyway. Clicking on it while pressed should close the Download manager again. Should a separate bug be filed for that?
No, no it shouldn't. Downloads is now a normal push button, just like Refresh or Stop. There is no toggle state to its action, unlike the two sidebar buttons. Pressing it always shows the Downloads window. Your suggestion of giving it a pressed state when the Downloads window is open would add more confusion. For the two sidebar buttons, clicking them when they are in the pressed state hides the associated object. So what would clicking a pressed Downloads button do, hide the Downloads window? Anything else would be inconsistent with how toggle buttons work. Downloads is definitely not a toggle button.
(In reply to comment #33) > Your suggestion of giving it a pressed state when the Downloads window is open > would add more confusion. [...] So what would clicking a > pressed Downloads button do, hide the Downloads window? Yes, that was my suggestion. I don't see why that would add more confusion than hiding the sidebar as is done now if clicking on a pressed History or Bookmarks icon? It would add consistency, though.
That's changing the behavior of the button. I like what it does now, being always showing the Downloads window. Downloads is no longer a sidebar, why should it behave like one?
I attached a patch to bug 228699. It makes the download manager close on ctrl-y or pressing the toolbar button. It also gives the button a pressed state, the same for all windows. The result is that you can toggle the download manager: Click to have a look at your downloads. Click again to get it out of the way. Or hit ctrl-y twice for that.
The changes here should be checked into the trunk, and also the 1.7 branch. We don't want Aviary to have a forked Gecko. Also, changes to widget/ need review. Even on the Aviary branch.
Keywords: fixed-aviary1.0
Still needed on trunk.
Status: RESOLVED → REOPENED
Keywords: aviary-landing
Resolution: FIXED → ---
[OT] Would fixing this bug magically also fix the similar bug in Thunderbird's compose window: the "Contacts" button? [/OT]
Flags: blocking-aviary1.1?
Needs new target milestone since the one listed is long gone.
Target Milestone: Firefox0.9 → Future
Target Milestone: Future → ---
Flags: blocking-aviary1.1? → blocking-aviary1.1-
I take it that taking away any target and removing any blocking indicates this is pretty much going into the dump file?
Attached patch patch v0 (obsolete) — Splinter Review
Add checked state back to toolbarbuttons.
Attachment #177350 - Flags: review?(cbiesinger)
Comment on attachment 177350 [details] [diff] [review] patch v0 I don't know the native theme code
Attachment #177350 - Flags: review?(cbiesinger) → review?(emaijala)
Comment on attachment 177350 [details] [diff] [review] patch v0 r=emaijala
Attachment #177350 - Flags: review?(emaijala) → review+
Attachment #177350 - Flags: superreview?(bzbarsky)
Comment on attachment 177350 [details] [diff] [review] patch v0 I don't follow this. Why is TB_CHECKED 5, of all things? Where are TB_CHECKED and TB_HOVER_CHECKEd actually used?
(In reply to comment #46) > I don't follow this. Why is TB_CHECKED 5, of all things? Where are TB_CHECKED > and TB_HOVER_CHECKEd actually used? These are used by drawThemeBG() in DrawWidgetBackground() to render the widget. TB_CHECKED and TB_HOVER_CHECKED are specific states of the toolbar 'part' (see http://msdn.microsoft.com/library/default.asp?url=/library/en-us/shellcc/platform/commctls/userex/topics/partsandstates.asp ). Note: TB_CHECKED = TS_CHECKED = 5; TB_HOVER_CHECKED = TS_HOT_CHECKED = 6; I chose to keep the constants consistent with the aviarybranch (see comment #38).
Comment on attachment 177350 [details] [diff] [review] patch v0 sr=bzbarsky if some comments are added (before this list of constants?) pointing to the relevant MSDN documentation....
Attachment #177350 - Flags: superreview?(bzbarsky) → superreview+
Attached patch patch v1Splinter Review
Updated patch with additional comments. Can someone please check this in for me?
Attachment #177350 - Attachment is obsolete: true
Assignee: firefox → son.le0
Status: REOPENED → NEW
Component: Toolbars → GFX: Win32
Flags: review+
Product: Firefox → Core
QA Contact: bugzilla → ian
Version: unspecified → Trunk
Checking in gfx/src/shared/nsNativeTheme.h; /cvsroot/mozilla/gfx/src/shared/nsNativeTheme.h,v <-- nsNativeTheme.h new revision: 1.14; previous revision: 1.13 done Checking in gfx/src/windows/nsNativeThemeWin.cpp; /cvsroot/mozilla/gfx/src/windows/nsNativeThemeWin.cpp,v <-- nsNativeThemeWin.cpp new revision: 3.43; previous revision: 3.42 done please mark fixed if it is
Status: NEW → RESOLVED
Closed: 22 years ago21 years ago
Resolution: --- → FIXED
Comment on attachment 177350 [details] [diff] [review] patch v0 emaijala's review+ flag was lost
Attachment #177350 - Flags: review+
Keywords: aviary-landing
*** Bug 227399 has been marked as a duplicate of this bug. ***
There is no pressed state using gtk2 clearlooks theme. Is this ther same or as different bug?
This bug was a Win32 only so I'd say the gtk2 issue is a different bug.
(In reply to comment #54) > This bug was a Win32 only so I'd say the gtk2 issue is a different bug. > The original poster lists: "User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021022 Phoenix/0.3 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021022 Phoenix/0.3" ??
(In reply to comment #55) Regardless of the browser, this bug for OS = WinXP, Component = GFX: Win32. If it affects Linux/gtk2 another bug should be raised.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: