Bug 176177 use the correct flag for buttons that are checked patch by Son Le <son.le0@gmail.com> r=emaijala sr=bz